--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
                 <img src="./images/linkedinprofile.jpg" alt="pinkett" width="100%" height="100%">
             </div>
             <div class="col-md-8">
-                <h2 class="text-light"><span style='font-size:100px;'>&#128075;</span> Hi there! I,m Sinethemba</h2>
+                <h2 class="text-light"><span style='font-size:100px;'>&#128075;</span> Hi there! I'm Sinethemba</h2>
                 <h4 class="text-success">Scientist and Web developer</h4>
                 <p class="text-light">
                    I am an aspiring web designer and tech entrepreneur at Life Choices Academy in Cape Town.
@@ -86,7 +86,7 @@
                             <tr>
                                 <th scope="row">2 </th>
                                 <td>Chemical science</td>
-                                <td>Petroleum engineer</td>
+                                <td>Petroleum engineering</td>
                             </tr>
                         </tbody>
                     </table>   
